--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": " react-scripts start ",
+    "heroku-postbuild": "json-server --watch db.json ",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
