--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "json-server": "^0.16.3"
   },
   "scripts": {
     "start": " react-scripts start ",
+    "heroku-postbuild": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
